2012-07-20  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-gethash): Allow value of t for arg predicate.

2012-07-20  Sam Steingold  <sds@gnu.org>
	* lisp/bbdb-com.el (bbdb-message-search): Allow args name or mail
	to be nil.

2012-07-19  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el: Simplify previous patch.
	(bbdb-electric-execute, bbdb-electric-quit, bbdb-electric-quit):
	Remove.
	(bbdb-display-records): Simplify.
	(bbdb-electric-display-records): Fix docstring.  Simplify.  Remove
	optional args select and horiz-p that interfere with
	Electric-pop-up-window.

2012-07-18  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-electric-display-records): Fix previous
	patch.

2012-07-18  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el: Autoload bbdb-search and bbdb-search-prompt.
	(bbdb-display-records): Make records a required arg.  Do not
	redefine keys.  Pass optional args to
	bbdb-electric-display-records.
	(bbdb-electric-display-records): New optional args layout, append,
	select, and horiz-p.  Make it a command.  Redefine SPC key
	temporarily.  Simplify.

2012-07-17  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-mua-update-interactive-p)
	(bbdb-mua-auto-update-p, bbdb-update-records-p): Update docstring.
	(bbdb-canonicalize-mail-function): Update docstring.
	(bbdb-message-caching): Use default nil till caching is fixed.
	(bbdb-cache-deleted-p, bbdb-cache-set-deleted-p)
	(bbdb-record-deleted-p, bbdb-record-set-deleted-p): Removed.
	(bbdb-display-name-organization): Use memq.

	* lisp/bbdb-mua.el (bbdb-mua, bbdb-message-header): Use memq.
	(bbdb-get-address-components): Allow mail to be nil. Use
	member-ignore-case.
	(bbdb-update-records): New value update for arg update-p.  Use
	memq.
	(bbdb-message-get-cache): Simplify.
	(bbdb-message-set-cache): Remove old value from cache.
	(bbdb-annotate-message): New value update for arg update-p.
	Operate on all records found by bbdb-message-search.  Return list